--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,6 @@ li {
 
 @layer components {
   .btn {
-    @apply disabled:bg-green-200 disabled:cursor-not-allowed hover:no-underline bg-green-500 tracking-wider w-full text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md hover:bg-green-600 transition-colors block;
+    @apply disabled:bg-green-200 disabled:cursor-not-allowed hover:no-underline bg-green-500 w-full text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md hover:bg-green-600 transition-colors block;
   }
 }
